# ariaops-mcp

./: .coverage  .env.example  .gitignore  AGENTS.md  Containerfile  README.md  REQUIREMENTS.md  TOOLS.md  instances.example.yaml  pyproject.toml
.claude/commands/: ship.md
.github/workflows/: ci.yml
src/ariaops_mcp/: __init__.py  __main__.py  circuit_breaker.py  client.py  config.py  demo_mcp_interaction.py  http_auth.py  instances.py  ldap_auth.py  oidc.py  principal.py  resolver.py  server.py
src/ariaops_mcp/skills/: access.py  executor.py  loader.py  models.py  registry.py
src/ariaops_mcp/tools/: _common.py  alerts.py  capacity.py  discovery.py  meta.py  metrics.py  reports.py  resources.py  write_ops.py
test-ui/: app.py  requirements.txt
test-ui/tests/: conftest.py  test_app.py
tests/: conftest.py  test_circuit_breaker.py  test_client.py  test_client_retry.py  test_config.py  test_demo_mcp_interaction.py  test_dual_auth.py  test_http_auth.py  test_instances.py  test_ldap_auth.py  test_logging_config.py  test_meta_tools.py  test_oidc_discovery.py  test_resolver.py  test_server.py
tests/test_skills/: test_access.py  test_executor.py  test_loader.py  test_models.py  test_registry.py
tests/test_tools/: test_alerts.py  test_capacity.py  test_common.py  test_discovery.py  test_metrics.py  test_reports.py  test_resources.py  test_response_shaping.py  test_write_ops.py
