[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariaops-mcp"
version = "0.1.0"
description = "Read-only MCP server for VMware Aria Operations (on-prem)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["vmware", "aria-operations", "vrops", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
ariaops-mcp = "ariaops_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ariaops_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
strict = []
